--- a/src/MauiDevTools/Controls/Profiler/Profiler.xaml
+++ b/src/MauiDevTools/Controls/Profiler/Profiler.xaml
@@ -1,26 +1,47 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="MauiDevTools.Controls.Profiler"
-             xmlns:controls="clr-namespace:MauiDevTools.Controls">
-    <ContentView.Resources>
+<toolkit:Popup
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    x:Class="MauiDevTools.Controls.Profiler"
+    xmlns:controls="clr-namespace:MauiDevTools.Controls"
+    xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+    Color="Black"
+    HorizontalOptions="Start"
+    VerticalOptions="Start">
+    <toolkit:Popup.Resources>
         <ResourceDictionary>
-            
-            <Style x:Key="ProfilerBorderStyle" TargetType="Border">
-                <Setter Property="StrokeShape" Value="RoundRectangle 12" />
+
+            <Style x:Key="ProfilerContainerBorderStyle" TargetType="Border">
+                <Setter Property="StrokeShape" Value="RoundRectangle 0" />
                 <Setter Property="StrokeThickness" Value="0" />
                 <Setter Property="BackgroundColor" Value="Black" />
                 <Setter Property="HorizontalOptions" Value="Center" />
+                <Setter Property="MinimumWidthRequest" Value="200" />
                 <Setter Property="MaximumWidthRequest" Value="600" />
             </Style>
-            
-            <Style x:Key="FpsCounterContainerStyle" TargetType="Grid">
-                <Setter Property="HorizontalOptions" Value="Start" />
+
+            <Style x:Key="ButtonStyle" TargetType="Border">
+                <Setter Property="StrokeShape" Value="RoundRectangle 12" />
+                <Setter Property="StrokeThickness" Value="0" />
+                <Setter Property="BackgroundColor" Value="White" />
+                <Setter Property="HorizontalOptions" Value="End" />
+                <Setter Property="VerticalOptions" Value="Start" />
+                <Setter Property="Margin" Value="4" />
+            </Style>
+
+            <Style x:Key="ButtonTextStyle" TargetType="Label">
+                <Setter Property="FontSize" Value="9" />
+                <Setter Property="TextColor" Value="Black" />
+                <Setter Property="Margin" Value="4" />
+            </Style>
+
+            <Style x:Key="ProfilerContainerStyle" TargetType="Grid">
+                <Setter Property="HorizontalOptions" Value="Fill" />
                 <Setter Property="VerticalOptions" Value="Start" />
                 <Setter Property="Margin" Value="12" />
             </Style>
 
-            <Style x:Key="FpsCounterBorderStyle" TargetType="Border">
+            <Style x:Key="ProfilerBorderStyle" TargetType="Border">
                 <Setter Property="StrokeShape" Value="RoundRectangle 12" />
                 <Setter Property="StrokeThickness" Value="0" />
                 <Setter Property="BackgroundColor" Value="White" />
@@ -34,90 +55,104 @@
                 <Setter Property="Margin" Value="0, 2" />
             </Style>
 
-            <Style x:Key="FpsCounterTextStyle" TargetType="Label">
+            <Style x:Key="ProfilerTextStyle" TargetType="Label">
                 <Setter Property="FontAttributes" Value="Bold" />
                 <Setter Property="TextColor" Value="Black" />
                 <Setter Property="Margin" Value="12, 2" />
             </Style>
 
             <Style x:Key="MemoryChartStyle" TargetType="controls:LineChart">
-      
+
             </Style>
-            
+
         </ResourceDictionary>
-    </ContentView.Resources>
+    </toolkit:Popup.Resources>
     <Border
-        Style="{StaticResource ProfilerBorderStyle}">
+        Style="{StaticResource ProfilerContainerBorderStyle}">
         <Grid
             RowDefinitions="*, *">
-            <!-- MEMORRY PROFILER -->
+            <!-- MEMORY PROFILER -->
             <Grid
-                RowDefinitions="Auto, Auto, *"
-                Style="{StaticResource FpsCounterContainerStyle}">
-            <Label 
-                Text="Memory (MB)"
-                Style="{StaticResource SectionTextStyle}"/>
-            <Border
-                Grid.Row="1"
-                Style="{StaticResource FpsCounterBorderStyle}">
-                <Label
-                    x:Name="UsedMemory"
-                    Style="{StaticResource FpsCounterTextStyle}"/>
-            </Border>
-            <controls:LineChart
-                x:Name="MemoryChart"
-                Grid.Row="2"
-                LineColor="White"
-                PointColor="LightGray"
-                Margin="12"
-			    AxisLinesColor="White"
-			    AxisLinesFontSize="11"
-			    AxisLinesStrokeSize="0.9"
-			    ChartMargin="12"
-			    ChartStyle="Curve"
-			    DisplayHeaderValues="True"
-			    DisplayHorizontalAxisLines="True"
-			    DisplayValueLabelsOnTop="True"
-			    DisplayVerticalAxisLines="True"
-			    EnableEntryAnimations="True"
-			    ExpandAndFillBackgroundCurvePath="True"
-			    FontSize="10"
-                FooterLabelsFontColor="White" 
-                FontColor="White"
-			    FooterLabelsMargin="8"
-			    FooterLabelsTextSize="9"
-			    HeaderValuesMargin="10"
-			    HeightRequest="150"
-                WidthRequest="200"
-			    HorizontalOptions="Fill"
-			    IsCurveBackgroundFilled="True"
-			    ItemSeparationMargin="8"
-			    PathsColorOpacity="0.65"
-			    PointSize="3"
-			    ReanimateOnPropertyChanged="False"
-			    ShowPointsForCurveStyle="True"
-			    StrokeSize="1.5"
-			    VerticalOptions="Start" />
+                RowDefinitions="Auto, Auto, Auto, *"
+                Style="{StaticResource ProfilerContainerStyle}">
+                <Border
+                    x:Name="Button"
+                    Style="{StaticResource ButtonStyle}">
+                    <Border.GestureRecognizers>
+                        <TapGestureRecognizer
+                            Tapped="ButtonTapped"/>
+                    </Border.GestureRecognizers>
+                    <Label
+                        x:Name="ButtonText"
+                        Text="Expand"
+                        Style="{StaticResource ButtonTextStyle}"/>
+                </Border>
+                <Label 
+                    Grid.Row="1"
+                    Text="Memory (MB)"
+                    Style="{StaticResource SectionTextStyle}"/>
+                <Border
+                    Grid.Row="2"
+                    Style="{StaticResource ProfilerBorderStyle}">
+                    <Label
+                        x:Name="UsedMemory"
+                        Style="{StaticResource ProfilerTextStyle}"/>
+                </Border>
+                <controls:LineChart
+                    x:Name="MemoryChart"
+                    Grid.Row="3"
+                    IsVisible="False"
+                    LineColor="White"
+                    PointColor="LightGray"
+                    Margin="12"
+			        AxisLinesColor="White"
+			        AxisLinesFontSize="11"
+			        AxisLinesStrokeSize="0.9"
+			        ChartMargin="12"
+			        ChartStyle="Curve"
+			        DisplayHeaderValues="True"
+			        DisplayHorizontalAxisLines="True"
+			        DisplayValueLabelsOnTop="True"
+			        DisplayVerticalAxisLines="True"
+			        EnableEntryAnimations="True"
+			        ExpandAndFillBackgroundCurvePath="True"
+			        FontSize="10"
+                    FooterLabelsFontColor="White" 
+                    FontColor="White"
+			        FooterLabelsMargin="8"
+			        FooterLabelsTextSize="9"
+			        HeaderValuesMargin="10"
+			        HeightRequest="150"
+                    WidthRequest="200"
+			        HorizontalOptions="Fill"
+			        IsCurveBackgroundFilled="True"
+			        ItemSeparationMargin="8"
+			        PathsColorOpacity="0.65"
+			        PointSize="3"
+			        ReanimateOnPropertyChanged="False"
+			        ShowPointsForCurveStyle="True"
+			        StrokeSize="1.5"
+			        VerticalOptions="Start" />
             </Grid>
             <!-- CPU PROFILER -->
             <Grid
                 Grid.Row="1"
                 RowDefinitions="Auto, Auto, *"
-                Style="{StaticResource FpsCounterContainerStyle}">
+                Style="{StaticResource ProfilerContainerStyle}">
                 <Label 
                     Text="CPU (%)"
                     Style="{StaticResource SectionTextStyle}"/>
                 <Border
                     Grid.Row="1"
-                    Style="{StaticResource FpsCounterBorderStyle}">
+                    Style="{StaticResource ProfilerBorderStyle}">
                     <Label
                         x:Name="UsedCpu"
-                        Style="{StaticResource FpsCounterTextStyle}"/>
+                        Style="{StaticResource ProfilerTextStyle}"/>
                 </Border>
                 <controls:LineChart
                     x:Name="CpuChart"
                     Grid.Row="2"
-                    BackgroundColor="Red"
+                    IsVisible="False"
                     LineColor="White" 
                     PointColor="LightGray"
                     Margin="5,0,5,0"
@@ -148,8 +183,8 @@
                     ReanimateOnPropertyChanged="False"
                     ShowPointsForCurveStyle="True"
                     StrokeSize="1.5"
-                    VerticalOptions="Start" />      
+                    VerticalOptions="Start" />
             </Grid>
         </Grid>
     </Border>
-</ContentView>
+</toolkit:Popup>
