--- a/src/MauiDevTools.Gallery/App.xaml
+++ b/src/MauiDevTools.Gallery/App.xaml
@@ -1,14 +1,16 @@
 ﻿<?xml version = "1.0" encoding = "UTF-8" ?>
-<Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             xmlns:local="clr-namespace:MauiDevTools.Gallery"
-             x:Class="MauiDevTools.Gallery.App">
-    <Application.Resources>
+<controls:DevToolsApplication 
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:local="clr-namespace:MauiDevTools.Gallery"
+    xmlns:controls="clr-namespace:MauiDevTools.Controls;assembly=MauiDevTools"
+    x:Class="MauiDevTools.Gallery.App">
+    <controls:DevToolsApplication.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
-    </Application.Resources>
-</Application>
+    </controls:DevToolsApplication.Resources>
+</controls:DevToolsApplication>
